# sdk-zephyr

./: README.rst
samples/minimal_positioning_beacon/: CMakeLists.txt  prj.conf  sample.yaml
samples/minimal_positioning_beacon/src/: main.c  radio.c  radio.h
subsys/bluetooth/controller/: Kconfig.ll_sw_split
subsys/bluetooth/controller/ll_sw/: nrf.cmake
subsys/bluetooth/controller/ll_sw/nordic/hal/nrf5/radio/: radio.c  radio.h
subsys/bluetooth/controller/ll_sw/nordic/lll/: lll_adv_sync.c
